@@ -46,6 +46,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26147: xmlrpc now works with strings not encodable with used
+  non-UTF-8 encoding.
+
 - Issue #25935: Garbage collector now breaks reference loops with OrderedDict.
 
 - Issue #16620: Fixed AttributeError in msilib.Directory.glob().
